Name:           repa-scalar
Version:        4.2.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Scalar data types and conversions.
Synopsis:       Scalar data types and conversions.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  build-Depends: 
        base              == 4.8.*,
        primitive         == 0.6.*,
        vector            == 0.10.*,
        bytestring        == 0.10.*,
        double-conversion == 2.0.*

  exposed-modules:
        Data.Repa.Scalar.Date32
        Data.Repa.Scalar.Double
        Data.Repa.Scalar.Int
        Data.Repa.Scalar.Singleton.Nat
        Data.Repa.Scalar.Singleton.Bool
        Data.Repa.Scalar.Product

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2


  extensions:
        GADTs
        DataKinds
        MagicHash
        BangPatterns
        TypeFamilies
        UnboxedTuples
        TypeOperators
        KindSignatures
        PatternGuards
        FlexibleInstances
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        ForeignFunctionInterface
