Name:           repa-scalar
Version:        4.2.4.0
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  1.18
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Scalar data types and conversions.
Synopsis:       Scalar data types and conversions.

source-repository head
  type:     git
  location: https://github.com/haskell-repa/repa.git

Library
  build-Depends:
        base              >= 4.9  && < 4.21,
        primitive         >= 0.6 && <0.10,
        vector            >= 0.11 && <0.14,
        time              >= 1.6 && <1.15,
        bytestring        >= 0.10 && <0.13,
        double-conversion >= 2.0 && <2.1

  default-language: Haskell2010

  exposed-modules:
        Data.Repa.Scalar.Singleton.Nat
        Data.Repa.Scalar.Singleton.Bool
        Data.Repa.Scalar.Box
        Data.Repa.Scalar.Date32
        Data.Repa.Scalar.Double
        Data.Repa.Scalar.Int
        Data.Repa.Scalar.Option
        Data.Repa.Scalar.Product

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  default-extensions:
        GADTs
        DataKinds
        MagicHash
        BangPatterns
        TypeFamilies
        UnboxedTuples
        TypeOperators
        KindSignatures
        PatternGuards
        FlexibleInstances
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        ForeignFunctionInterface
