Name:           repa-series
Version:        1.0.1.0
License:        BSD3
License-File:   LICENSE
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         The DPH Team
Synopsis:       Series Expressionss API
Description:   
        Series expression API for writing programs subjected to the
        Data Flow Fusion performed by the repa-plugin.

Library
  Exposed-Modules:
        Data.Array.Repa.Series
        Data.Array.Repa.Series.Series
        Data.Array.Repa.Series.Vector
        Data.Array.Repa.Series.Sel
        Data.Array.Repa.Series.Fallback
        Data.Array.Repa.Series.Ref
        Data.Array.Repa.Series.Rate
        Data.Array.Repa.Series.Prim
        Data.Array.Repa.Series.Prim.Utils
        Data.Array.Repa.Series.Prim.Loop
        Data.Array.Repa.Series.Prim.Int
        Data.Array.Repa.Series.Prim.Word
        Data.Array.Repa.Series.Prim.Float
        Data.Array.Repa.Series.Prim.Double

  Build-Depends:
        base       == 4.6.*,
        ghc        >= 7.5,
        ghc-prim   >= 0.3,
        vector     == 0.10.*

  Default-Language:
        Haskell2010

  Default-Extensions:
        TypeSynonymInstances
        BangPatterns
        RankNTypes
        MagicHash
        UnboxedTuples
