Name:           repa-store
Version:        4.1.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Repa data store.
Synopsis:       Repa data store.

Library
  build-Depends: 
        base                 == 4.8.*,
        mtl                  >= 2.2.1  && < 2.3,
        text                 >= 1.2.0  && < 1.3,
        filepath             >= 1.4.0  && < 1.5,
        containers           >= 0.5.6  && < 0.6,
        aeson                >= 0.8.0  && < 0.9,
        unordered-containers >= 0.2.5  && < 0.3,
        directory            >= 1.2.2  && < 1.3,
        bytestring           >= 0.10.6 && < 0.11,
        repa-convert         >= 4.1.0  && < 4.2

  exposed-modules:
        Data.Repa.Store.Format
        Data.Repa.Store.Object
        Data.Repa.Store.Object.Table

  ghc-options:
        -threaded
        -Wall -fno-warn-missing-signatures
        -O2 -Werror

  extensions:
        PatternGuards
        OverloadedStrings
        ExistentialQuantification
        TypeOperators
        StandaloneDeriving
        GADTs
