Name:           repa-store
Version:        4.2.0.0
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Repa data store.
Synopsis:       Repa data store.

Library
  build-Depends: 
        base                 == 4.8.*,
        mtl                  >= 2.2.1  && < 2.3,
        text                 >= 1.2.0  && < 1.3,
        filepath             >= 1.4.0  && < 1.5,
        containers           >= 0.5.6  && < 0.6,
        aeson                >= 0.8.0  && < 0.9,
        cryptohash           >= 0.11   && < 0.12,
        unordered-containers >= 0.2.5  && < 0.3,
        directory            >= 1.2.2  && < 1.3,
        bytestring           >= 0.10.6 && < 0.11,
        base16-bytestring    >= 0.1.1  && < 0.2,
        filelock             >= 0.1.0  && < 0.2,
        unix                 >= 2.7.1  && < 2.8,
        repa-scalar          >= 4.2.0  && < 4.3,
        repa-convert         >= 4.2.0  && < 4.3,
        repa-array           >= 4.2.0  && < 4.3,
        repa-flow            >= 4.2.0  && < 4.3

  exposed-modules:
        Data.Repa.Store.Codec.XSV

        Data.Repa.Store.Object.Table
        Data.Repa.Store.Object.Column
        Data.Repa.Store.Object.Dimension
        Data.Repa.Store.Object.Family
        Data.Repa.Store.Object

        Data.Repa.Store.Prim.BiMap
        Data.Repa.Store.Prim.HashLog

        Data.Repa.Store.Format
        Data.Repa.Store.Flow
        Data.Repa.Store.Resolve
        Data.Repa.Store.Partitions
 
  ghc-options:
        -threaded
        -Wall -fno-warn-missing-signatures
        -O2 -Werror

  include-dirs:
        include

  install-includes:
        repa-store.h

  extensions:
        CPP
        GADTs
        LambdaCase
        BangPatterns
        TypeOperators
        PatternGuards
        FlexibleContexts
        OverloadedStrings
        StandaloneDeriving
        ScopedTypeVariables
        ExistentialQuantification
