Name:           repa-stream
Version:        3.2.2.1
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Pure stream and chain functions.
Synopsis:       Pure stream and chain functions.


Library
  Build-Depends: 
        base            == 4.6.*,
        vector          == 0.9.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -Odph
        -fno-liberate-case
        -fsimplifier-phases=4
        -funfolding-use-threshold=1000
        -funfolding-keeness-factor=1000
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -optlo-O3

  extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards
        OverlappingInstances
        MagicHash
        ExistentialQuantification

  Exposed-modules:
        Data.Array.Repa.Distro

        Data.Array.Repa.Chain.Base
        Data.Array.Repa.Chain.Replicate
        Data.Array.Repa.Chain.Map
        Data.Array.Repa.Chain.Indexed
        Data.Array.Repa.Chain.Eval
        Data.Array.Repa.Chain

        Data.Array.Repa.Stream.Base
        Data.Array.Repa.Stream.Pack
        Data.Array.Repa.Stream.Eval
        Data.Array.Repa.Stream.Map
        Data.Array.Repa.Stream.Fold
        Data.Array.Repa.Stream.Flatten
        Data.Array.Repa.Stream

