Name:           repa-stream
Version:        4.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Stream functions not present in the vector library.
Synopsis:       Stream functions not present in the vector library.

Library
  build-Depends: 
        base            == 4.7.*,
        vector          == 0.10.*

  exposed-modules:
        Data.Repa.Vector.Unboxed

        Data.Repa.Stream.Segment

  ghc-options:
        -Wall 
        -fno-warn-missing-signatures
        -O2
        -fcpr-off
        -fno-spec-constr
        -funbox-strict-fields

  extensions:
        NoMonomorphismRestriction
        BangPatterns


