Name:           repa-stream
Version:        4.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Stream functions not present in the vector library.
Synopsis:       Stream functions not present in the vector library.

source-repository head
  type:     git
  location: https://github.com/DDCSF/repa.git

Library
  build-Depends: 
        base            == 4.7.*,
        vector          == 0.10.*,
        primitive       == 0.5.4.*,
        mtl             == 2.2.*

  exposed-modules:
        Data.Repa.Chain
        Data.Repa.Option
        Data.Repa.Stream
        Data.Repa.Vector.Generic
        Data.Repa.Vector.Unboxed


  other-modules:
        Data.Repa.Chain.Base
        Data.Repa.Chain.Scan
        Data.Repa.Chain.Weave
        Data.Repa.Chain.Folds

        Data.Repa.Stream.Extract
        Data.Repa.Stream.Ratchet
        Data.Repa.Stream.Segment
        Data.Repa.Stream.Dice
        Data.Repa.Stream.Pad
        Data.Repa.Stream.Merge

  include-dirs:
        include

  install-includes:
        repa-stream.h

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        CPP
        NoMonomorphismRestriction
        ExistentialQuantification
        BangPatterns
        FlexibleContexts
        PatternGuards
        MultiWayIf


