Name:           repa-tools
Version:        4.2.0.0
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    General purpose tools written with the Repa library.
Synopsis:       General purpose tools written with the Repa library.


Source-repository head
  Type:     git
  Location: https://github.com/DDCSF/repa.git


Executable repa-build
  Build-depends: 
        base            == 4.8.*,
        directory       == 1.2.*,
        filepath        == 1.4.*,
        bytestring      >= 0.10.6 && < 0.11,
        aeson           >= 0.8.0  && < 0.9,
        aeson-pretty    >= 0.7.2  && < 0.8,
        buildbox        >= 2.1.6  && < 2.2,
        repa-array      >= 4.2.0  && < 4.3,
        repa-flow       >= 4.2.0  && < 4.3,
        repa-query      >= 4.2.0  && < 4.3

  Main-is:              Main.hs
  HS-source-dirs:       tools/build
  Other-modules:        Config

  Extensions:
        PatternGuards
        BangPatterns
        ScopedTypeVariables
        MultiWayIf

  GHC-options: 
        -Wall -fno-warn-missing-signatures
        -rtsopts -threaded 
        -O2


Executable repa-fields
  Build-depends: 
        base            == 4.8.*,
        repa-array      == 4.2.0.*,
        repa-flow       == 4.2.0.*

  Main-is:              Main.hs
  HS-source-dirs:       tools/fields
  Other-modules:        Config

  Extensions:
        PatternGuards
        BangPatterns

  GHC-options: 
        -Wall -fno-warn-missing-signatures
        -rtsopts -threaded 
        -O2


Executable repa-sieve
  Build-depends: 
        base            == 4.8.*,
        directory       == 1.2.*,
        filepath        == 1.4.*,
        repa-array      == 4.2.0.*,
        repa-flow       == 4.2.0.*

  Main-is:              Main.hs
  HS-source-dirs:       tools/sieve
  Other-modules:        Config

  Extensions:
        PatternGuards
        BangPatterns
        MultiWayIf

  GHC-options: 
        -Wall -fno-warn-missing-signatures
        -rtsopts -threaded 
        -O2


Executable repa-tags
  Build-depends: 
        base            == 4.8.*,
        directory       == 1.2.*,
        filepath        == 1.4.*,
        tagsoup         >= 0.13.3 && < 0.14

  Main-is:              Main.hs
  HS-source-dirs:       tools/tags
  Other-modules:        Config

  Extensions:
        PatternGuards
        ScopedTypeVariables

  GHC-options: 
        -Wall -fno-warn-missing-signatures
        -rtsopts -threaded 
        -O2

