Name:           repa-vector
Version:        3.2.2.1
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:            
Synopsis:       Chain-based segmented vector operations.  


Library
  Build-Depends: 
        base            == 4.6.*,
        vector          == 0.9.*,
        repa            == 3.2.*,
        repa-stream     == 3.2.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -Odph
        -fno-liberate-case
        -fsimplifier-phases=4
        -funfolding-use-threshold=1000
        -funfolding-keeness-factor=1000
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -optlo-O3

  extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards
        OverlappingInstances
        MagicHash
        ExistentialQuantification

  Exposed-modules:
        Data.Array.Repa.Repr.Chain
        Data.Array.Repa.Vector.Base

