Name:           repa-vector
Version:        3.2.2.1
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:            
Synopsis:       Representation dependent vector operations.


Library
  Build-Depends: 
        base            == 4.6.*,
        vector          == 0.10.*,
        repa            == 3.2.*,
        repa-flow       == 3.2.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards
        OverlappingInstances
        MagicHash
        ExistentialQuantification

  Exposed-modules:
        Data.Array.Repa.Vector
        Data.Array.Repa.Vector.Segd
        Data.Array.Repa.Vector.Repr.Flow
        Data.Array.Repa.Vector.Operators.Map
        Data.Array.Repa.Vector.Operators.Zip
        Data.Array.Repa.Vector.Operators.Project

  Other-modules:
        Data.Array.Repa.Vector.Base
        


