Name:           repa-vector
Version:        4.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:            
Synopsis:       Representation dependent vector operations.


Library
  Build-Depends: 
        base            == 4.6.*,
        ghc-prim        == 0.3.*,
        vector          == 0.10.*,
        repa-flow       == 4.0.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -O2

  extensions:
        NoMonomorphismRestriction
        ExplicitForAll
        EmptyDataDecls
        BangPatterns
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving
        ScopedTypeVariables
        PatternGuards
        OverlappingInstances
        MagicHash
        UnboxedTuples
        ExistentialQuantification

  Exposed-modules:
        Data.Array.Repa.Vector
        Data.Array.Repa.Vector.Elt
        Data.Array.Repa.Vector.Shape
        Data.Array.Repa.Vector.Index
        Data.Array.Repa.Vector.Segd
        Data.Array.Repa.Vector.Repr.Delayed
        Data.Array.Repa.Vector.Repr.Unboxed
        Data.Array.Repa.Vector.Repr.Flow
        Data.Array.Repa.Vector.Operators.Bulk
        Data.Array.Repa.Vector.Operators.Map
        Data.Array.Repa.Vector.Operators.Zip
        Data.Array.Repa.Vector.Operators.Project

  Other-modules:
        Data.Array.Repa.Vector.Base
        


