Name:                repa
Version:             1.1.0.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://trac.haskell.org/repa
Bug-reports:         http://trac.haskell.org/repa/newticket
Description:
        NOTE: You must use the GHC head branch > 6.13.20100309 to get decent performance.
        Repa provides high performance, regular, multi-dimensional, shape polymorphic parallel arrays.
        All numeric data is stored unboxed. Functions written with the Repa combinators
        are automatically parallel provided you supply +RTS -Nwhatever on the command
        line when running the program.

Synopsis:
        High performance, regular, shape polymorphic parallel arrays.

Tested-with: GHC == 6.13.20100309, GHC == 6.12.1

Library
  Build-Depends: 
        base                 == 4.*,
        dph-prim-par         == 0.4.*,
        dph-prim-seq         == 0.4.*,
        QuickCheck           == 2.1.*

  ghc-options:
        -Odph -Wall -fno-warn-missing-signatures

  Exposed-modules:
        Data.Array.Repa
        Data.Array.Repa.Index
        Data.Array.Repa.Shape
        Data.Array.Repa.Slice

  Other-modules:
        Data.Array.Repa.QuickCheck
       