Name:                repa
Version:             2.2.0.1
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Repa provides high performance, regular, multi-dimensional, shape polymorphic
        parallel arrays. All numeric data is stored unboxed. Functions written with
        the Repa combinators are automatically parallel provided you supply
        +RTS -Nwhatever on the command line when running the program.

Synopsis:
        High performance, regular, shape polymorphic parallel arrays.

Tested-with: GHC == 7.0.1

Library
  Build-Depends: 
        base                 == 4.4.*,
        ghc-prim             == 0.2.*,
        vector               == 0.9.*,
        QuickCheck           >= 2.3 && < 2.5,
        template-haskell     >= 2.5 && < 2.7

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -Odph
        -funbox-strict-fields
        -fcpr-off

  Exposed-modules:
        Data.Array.Repa
        Data.Array.Repa.Index
        Data.Array.Repa.Shape
        Data.Array.Repa.Slice
        Data.Array.Repa.Stencil
        Data.Array.Repa.Arbitrary
        Data.Array.Repa.Properties
        Data.Array.Repa.Specialised.Dim2

  Other-modules:
        Data.Array.Repa.Operators.IndexSpace
        Data.Array.Repa.Operators.Traverse
        Data.Array.Repa.Operators.Interleave
        Data.Array.Repa.Operators.Mapping
        Data.Array.Repa.Operators.Modify
        Data.Array.Repa.Operators.Reduction
        Data.Array.Repa.Operators.Select
        Data.Array.Repa.Internals.Elt
        Data.Array.Repa.Internals.Base
        Data.Array.Repa.Internals.Gang
        Data.Array.Repa.Internals.EvalChunked
        Data.Array.Repa.Internals.EvalBlockwise
        Data.Array.Repa.Internals.EvalCursored
        Data.Array.Repa.Internals.EvalReduction
        Data.Array.Repa.Internals.Forcing
        Data.Array.Repa.Internals.Select
        Data.Array.Repa.Stencil.Base
        Data.Array.Repa.Stencil.Template
