Name:                repa-bytestring
Version:             3.0.0.1
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:         (deprecated)
Synopsis:            (deprecated)

Library
  Build-Depends: 
        base                 == 4.*,
        repa                 == 3.0.*

  ghc-options:
        -Odph -Wall -fno-warn-missing-signatures

      
