Name:                pagerank
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Ben Lippmeier <benl@ouroborus.net>
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures

Executable pagerank
  Build-depends: 
        base,
        directory         == 1.1.*,
        bytestring        == 0.9.2.*,
        containers        == 0.4.2.*,
        repa              == 3.2.*,
        vector            == 0.9.*,
        vector-algorithms == 0.5.4

  Main-is: 
        Main.hs

  other-modules:
        Page Progress
        External.Rank External.Step External.Count External.Titles
        Internal.Rank Internal.Step Internal.Load

  hs-source-dirs: src

  ghc-options: 
        -rtsopts 
        -threaded 
        -O2

  extensions:
        PatternGuards
        BangPatterns
