Name:                pagerank
Version:             1.0
License:             BSD3
License-file:        LICENSE
Author:              Ben Lippmeier <benl@ouroborus.net>
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but you need to have the LLVM compiler installed.

  Default:      False

Executable pagerank
  Build-depends:
        base,
        directory         >= 1.1,
        bytestring        >= 0.9.2,
        containers        >= 0.4.2,
        repa              == 3.4.*,
        vector            >= 0.9,
        vector-algorithms >= 0.5.4

  Main-is:
        Main.hs

  other-modules:
        Page Progress
        External.Rank External.Step External.Count External.Titles
        Internal.Rank Internal.Step Internal.Load

  hs-source-dirs: src

  ghc-options:
        -rtsopts
        -threaded
        -Odph
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100

  if flag(llvm)
    ghc-options:
        -fllvm -optlo-O3

  extensions:
        PatternGuards
        BangPatterns
        GADTs

-- vim: nospell

